--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,22 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
+}
+header{
+    height: 100vh;
+    overflow: hidden;
 }
 body{
     background: #F5FCFF;
+}
+.hero-section{
+    display: flex;
+}
+.hero-section-content{
+    width: 40%;
+}
+.grid-images{
+    width: 20%;
+    display: flex;
 }
